--- a/CustomerReviews/CustomerReviews.Web/CustomerReviews.Web.csproj
+++ b/CustomerReviews/CustomerReviews.Web/CustomerReviews.Web.csproj
@@ -117,6 +117,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Localizations\en.customerReviews.json" />
+    <Content Include="Scripts\blades\reviews-props.js" />
+    <Content Include="Scripts\blades\reviews-props.tpl.html" />
     <Content Include="Scripts\widgets\customerReviewWidget.js" />
     <Content Include="Scripts\widgets\customerReviewWidget.tpl.html" />
     <None Include="module.ignore" />
